--- a/configure.ac
+++ b/configure.ac
@@ -1,24 +1,33 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.68])
-AC_INIT([mingwpath], [0.10], [berryzplus@gmail.com])
+AC_INIT([mingwpath], [0.11], [berryzplus@gmail.com])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_SRCDIR([src/mingwpath.c])
+AC_CONFIG_MACRO_DIR([m4])
 
+AC_CANONICAL_SYSTEM
+AX_ENABLE_BUILDDIR
 AM_INIT_AUTOMAKE()
+
 
 # Checks for programs.
 AC_PROG_CC
+
+
+# Checks for typedefs, structures, and compiler characteristics.
 AC_C_INLINE
 
+
 # Checks for libraries.
+
 
 # Checks for header files.
 AC_CHECK_HEADERS([string.h])
 
-# Checks for typedefs, structures, and compiler characteristics.
 
 # Checks for library functions.
+
 
 AC_ARG_WITH(unicode,
   AS_HELP_STRING([--with-unicode], [use unicode (default is YES)]),
@@ -33,12 +42,6 @@ AH_BOTTOM([
 #define UNICODE 1
 #endif
 
-#include <string.h>
-#include <stdlib.h>
-#include <stdio.h>
-
-#include <tchar.h>
-
 #if !defined(_WIN32_WINNT)
 #define _WIN32_WINNT_WINXP  0x0501
 #define _WIN32_WINNT        _WIN32_WINNT_WINXP
@@ -47,6 +50,11 @@ AH_BOTTOM([
 
 #define WIN32_LEAN_AND_MEAN
 #include <windows.h>
+
+#include <string.h>
+#include <stdlib.h>
+#include <stdio.h>
+#include <tchar.h>
 
 #ifndef _SHLOBJ_H
 #include <shlobj.h>
