--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,7 @@
-## Process this with automake to create Makefile.in
+## Process this file with automake to produce Makefile.in
 
+ACLOCAL_AMFLAGS = -I m4
+
+# Build a executable for installation in bindir.
 bin_PROGRAMS = mingwpath
 mingwpath_SOURCES = src/mingwpath.c src/shellfolders.c src/wmain.c src/main.c
